{{$NEXT}}

      [BUG FIXES]

      - Fixed argument processing in the `reset` and `revert` commands.

      - Fixed some typos in the documentation.

      [OTHER]

      - Upgraded to latest Module::CoreList to support newer perls.

      - Switched to an internal fork of Term::EditorEdit to avoid
        unwanted dependency on deprecated module Any::Moose

0.12      2016-07-25 20:58:40-07:00 America/Los_Angeles

      [BUG FIXES]

      - The 02packages index is now sorted case-insensitively, just like
        PAUSE. Fixes GH #226. Thanks @miyagawa

      - Now requires Module::Metadata 1.000031, fixing GH #204.

      - Now requires latest Module::CoreList (currently 5.20160720)
        to support latest perl releases.

0.11_01   2016-07-16 21:37:51-07:00 America/Los_Angeles

      [DEVELOPER RELEASE]

      - Changes consolidated above under version 0.12

0.11      2015-08-12 01:25:13-07:00 America/Los_Angeles

      [BUG FIXES]

      - Workaround conflict between version and EU::MM::version. GH #204.

0.09999   2015-06-13 22:13:46-07:00 America/Los_Angeles

      [BUG FIXES]

      - Fixed tests that failed in environments using an HTTP proxy. GH #202.

0.09998   2015-06-10 00:28:12-07:00 America/Los_Angeles

      [THANKS]

      Several of the changes in this release were contributed by Chris Kirke as
      part of the CPAN Pull Request Challenge, organized by Neil Bowers. I am
      sincerely grateful for their efforts.

      [BUG FIXES]

      - The t/, xt/, inc, and local/ directories are always ignored when
        indexing a distribution. This is exactly what PAUSE does.

      - Fixed test failures caused by the presence of a ~/.pause file. GH #172.

      [NEW COMMANDS]

      - The "look" command will unpack a distribution into a temporary directory
      and spawn a subshell in that location.  Contributed by Kal Hodgson.

      [ENHANCMENTS]

      - The "diff" command now has a --format option for more precise control