@@ -108,8 +108,7 @@ meta_noindex = 1         ; respect prior no_index directives
 ; build system
 [ExecDir]                ; include 'bin/*' as executables
 [ShareDir]               ; include 'share/' for File::ShareDir
-[ModuleBuild]            ; create Build.PL
-mb_class = Pinto::Module::Build
+[MakeMaker]              ; create Makefile.PL
 
 ; manifest (after all generated files)
 [Manifest]               ; create MANIFEST
